Full revamp of the UI described in the front folder
